@@ -22,6 +22,7 @@
 package io.crate.integrationtests;
 
 import io.crate.action.sql.SQLActionException;
+import org.elasticsearch.cluster.metadata.MetaDataService;
 import org.elasticsearch.test.ElasticsearchIntegrationTest;
 import org.junit.Rule;
 import org.junit.Test;
@@ -32,7 +33,10 @@ import java.io.File;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
+import java.util.Map;
+import java.util.concurrent.Semaphore;
 
 @ElasticsearchIntegrationTest.ClusterScope(scope = ElasticsearchIntegrationTest.Scope.SUITE, numDataNodes = 1)
 public class BulkSettingsTest extends SQLTransportIntegrationTest {
@@ -57,14 +61,24 @@ public class BulkSettingsTest extends SQLTransportIntegrationTest {
         execute("set global transient bulk.partition_creation_timeout='1ms'");
 
         expectedException.expect(SQLActionException.class);
-        expectedException.expectMessage("waiting for partitions to be created timed out after 1ms");
+        expectedException.expectMessage("failed to process cluster event (acquire index lock) within 1ms");
+
+        // locks are acquired here to make sure that the indices operation cannot finish within 1ms
+        String masterName = internalCluster().getMasterName();
+        MetaDataService metaDataService = internalCluster().getInstance(MetaDataService.class, masterName);
+        Map<Semaphore, Collection<String>> semaphoreCollectionMap = metaDataService.indexMetaDataLocks(Arrays.asList(
+                ".partitioned.ttt.04134", ".partitioned.ttt.04136", ".partitioned.ttt.04132"));
+        for (Semaphore semaphore : semaphoreCollectionMap.keySet()) {
+            semaphore.acquire();
+        }
 
         try {
             execute("copy ttt from ?", new Object[]{file.getAbsolutePath()});
         } finally {
-            // wait until indices creation has been finished (with timeout)
-            waitNoPendingTasksOnAll();
             execute("reset global bulk.partition_creation_timeout");
+            for (Semaphore semaphore : semaphoreCollectionMap.keySet()) {
+                semaphore.release();
+            }
         }
     }
 }
